# aurum-hikari

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  VERSION  docs-requirements.txt  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  format.yml  publish.yml
aurum/: __init__.py  __init__.pyi  __main__.py  _about.py  autocomplete.py  client.py  context.py  events.py  exceptions.py  hook.py  hook_result.py  hooks.py  includable.py  option.py  types.py  version.py
aurum/abc/: hook.py
aurum/abc/i18n/: __init__.py  translation_engine.py
aurum/client/: __init__.py  client.py  integration.py
aurum/commands/: __init__.py  app_command.py  base_command.py  command_builder.py  command_handler.py  constants.py  consts.py  context_menu_command.py  exceptions.py  message_command.py  options.py  slash_command.py  slash_command_meta.py  sub_command.py  sub_commands.py  types.py  typing.py  user_command.py
aurum/commands/decorators/: __init__.py  callback.py  sub_command.py
aurum/commands/enum/: __init__.py  sync_commands.py
aurum/commands/impl/: command_builder.py  command_handler.py
aurum/components/: __init__.py
aurum/enum/: sync_commands.py
aurum/errors/: __init__.py  error_handler.py
aurum/events/: __init__.py  event.py
aurum/exceptions/: base_exception.py  commands_exceptions.py
aurum/ext/cooldown/: __init__.py  bucket.py  cooldown.py  exceptions.py  hook.py  utils.py
aurum/ext/i18n/: default_translation_engine.py  translatable.py
aurum/ext/plugins/: __init__.py  plugin.py  plugin_integration.py  plugin_manager.py
aurum/ext/tasks/: __init__.py  base_task.py  cron.py  task.py  typing.py
aurum/hooks/: __init__.py  hook.py  hook_result.py
aurum/i18n/: __init__.py  ilocalization_engine.py  translatable.py
aurum/impl/: client.py
aurum/interaction/: __init__.py  interaction_context.py
aurum/interactions/: __init__.py  interaction_context.py  interaction_processor.py
aurum/internal/: command_builder.py  command_handler.py  consts.py  includable.py  interaction_processor.py
aurum/internal/commands/: __init__.py  app_command.py  command_handler.py  context_menu_command.py
aurum/internal/exceptions/: __init__.py  commands_exceptions.py
aurum/internal/utils/: commands.py
aurum/l10n/: __init__.py  locale.py  localization_provider_interface.py  localized.py  pass_localization_provider.py  types.py
aurum/options/: __init__.py  choice.py  option.py
aurum/utils/: __init__.py  cast_translatable.py  logs.py  timeit.py
docs/: conf.py  contributing.rst  index.md  index.rst  quick-start.md
docs/api/: client.md
docs/api/commands/: message_command.md  slash_command.md  user_command.md
docs/api/commands/decorators/: sub_command.md
docs/api/interactions/: interaction_context.md
docs/api/options/: choice.md  option.md
docs/integrations/: plugins.md
docs/reference/: autocomplete.md  client.md  context.md  events.md  exceptions.md  hook.md  hooks.md  includable.md  index.rst  option.md  types.md
docs/reference/client/: client.md  integration.md
docs/reference/commands/: command_handler.md  message_command.md  slash_command.md  sub_command.md  user_command.md
docs/reference/commands/decorators/: sub_command.md
docs/reference/commands/enum/: sync_commands_flag.md
docs/reference/cooldown/: bucket.md  cooldown.md  hook.md
docs/reference/enum/: sync_commands_flag.md
docs/reference/interactions/: interaction_context.md
docs/reference/internal/: command_handler.md  includable.md
docs/reference/localization/: locale.md  localization_provider_interface.md  localized.md
docs/reference/options/: choice.md  option.md
docs/reference/plugins/: plugin.md  plugin_manager.md
docs/reference/tasks/: cron.md  task.md
examples/: autocomplete.py
examples/commands/: message_command.py  user_command.py
examples/commands/slash/: single_command.py  with_sub_command_group.py  with_sub_commands.py
examples/plugins/bot/plugins/: information.py
examples/tasks/: cron.py  task.py
pipelines/: tests.nox.py  typing.nox.py
quick-start/: index.html
reference/autocomplete/: index.html
reference/client/: index.html
reference/client/client/: index.html
reference/client/integration/: index.html
reference/commands/command_handler/: index.html
reference/commands/decorators/sub_command/: index.html
reference/commands/enum/sync_commands_flag/: index.html
reference/commands/message_command/: index.html
reference/commands/slash_command/: index.html
reference/commands/sub_command/: index.html
reference/commands/user_command/: index.html
reference/context/: index.html
reference/cooldown/bucket/: index.html
reference/cooldown/cooldown/: index.html
reference/cooldown/hook/: index.html
reference/enum/sync_commands_flag/: index.html
reference/events/: index.html
reference/exceptions/: index.html
reference/ext/plugins/plugin/: index.html
reference/ext/plugins/plugin_manager/: index.html
reference/hooks/: index.html
reference/includable/: index.html
reference/integrations/plugins/: index.html
reference/interactions/interaction_context/: index.html
reference/internal/command_handler/: index.html
reference/internal/includable/: index.html
reference/localization/localization_provider_interface/: index.html
reference/localization/localized/: index.html
reference/option/: index.html
reference/options/choice/: index.html
reference/options/option/: index.html
reference/plugins/plugin/: index.html
reference/plugins/plugin_manager/: index.html
reference/tasks/cron/: index.html
reference/tasks/task/: index.html
search/: search_index.json
src/aurum/: __init__.py  __init__.pyi  context.py
src/aurum/commands/: __init__.pyi  base_command.py  context_menu_command.py  options.py  slash_command.py  sub_command.py  types.py
src/aurum/commands/decorators/: __init__.py  __init__.pyi  sub_command.py
src/aurum/commands/impl/: __init__.py  __init__.pyi  command_builder.py  command_handler.py
src/aurum/utils/: logs.py
(+3 files in other folders)
