[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "aurum.__version__"}

[project]
name = "aurum-hikari"
dynamic = ["version"]
authors = [
  { name="stefanlight8", email="64615032+stefanlight8@users.noreply.github.com" },
]
description = "A flexible framework for handling commands and components."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "discord",
    "hikari",
    "commands",
    "components",
    "framework",
]
dependencies = [
    "attrs>=24.2",
    "hikari>=2.0.0.dev122",
]

[project.urls]
Homepage = "https://github.com/ShinshiDevs/aurum-hikari"
Issues = "https://github.com/ShinshiDevs/aurum-hikari/issues"
Documentation = "https://shinshidevs.github.io/aurum-hikari/"

[project.optional-dependencies]
cron-tasks = ["croniter"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "double"
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
