[project]
name = "aurum-hikari"
description = "A flexible framework for handling commands and components."
authors = [
  { name="stefanlight8", email="64615032+stefanlight8@users.noreply.github.com" },
]
version = "0.1.6.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "attrs>=24.2",
    "hikari>=2.0.0.dev122",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "discord",
    "hikari",
    "commands",
    "components",
    "framework",
]

[project.urls]
Homepage = "https://github.com/ShinshiDevs/aurum-hikari"
Issues = "https://github.com/ShinshiDevs/aurum-hikari/issues"
Documentation = "https://shinshidevs.github.io/aurum-hikari/"

[project.optional-dependencies]
cron-tasks = ["croniter"]

[tool.uv]
cache-keys = [{ file = "aurum/__init__.py" }]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
preview = true
extend-select = [
    "I",    # isort
    "ANN",  # flake8-annotations
    "LOG",  # flake8-logging-format
]
select = [
    "B",    # Bugbear rules
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PL",   # pylint rules
]
ignore = [
    "E203", # Handled by Black
    "E501", # Line length handled by Black
]
exclude = [
    "build/",
    "dist/",
    "docs/",
    "__pycache__/",
    "*.egg-info/",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "double"
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
